@@ -2,7 +2,7 @@ Package: RQDA
 Type: Package
 Title: R-based Qualitative Data Analysis
 Version: 0.1-9
-Date: 2010-02-22
+Date: 2010-02-27
 Author: HUANG Ronggui
 Maintainer: HUANG Ronggui <ronggui.huang@gmail.com>
 Depends: R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36), igraph
