@@ -13,7 +13,7 @@
 Package: \tab RQDA\cr
 Type: \tab Package\cr
 Version: \tab 0.1-9\cr
-Date: \tab 2010-02-22\cr
+Date: \tab 2010-02-27\cr
 Depends: \tab R (>= 2.8.0), DBI, RSQLite, gWidgets (>= 0.0-31),
 gWidgetsRGtk2 (>= 0.0-36), igraph \cr
 Imports: \tab RGtk2 (>= 2.12.8), methods \cr
